<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".database.model.Product">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="121dp"
        android:layout_height="115dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153"
        app:srcCompat="@drawable/stock" />

    <TextView
        android:id="@+id/textViewKasir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ubah_kasir"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/btn_simpan_kasir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#34EB49"
        android:text="@string/simpan"
        android:theme="@style/style1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77"
        app:rippleColor="#34eb49"
        app:strokeColor="#34EB49" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nama_kasir_tp"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewKasir"
        app:layout_constraintVertical_bias="0.06">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_nama_kasir_tp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_kasir" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email_tp"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_nama_kasir_tp"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_email_tp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_jns_kelamin_tp"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email_tp"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_jns_kelamin_tp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_jns_kelamin" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nohp_tp"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_simpan_kasir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_jns_kelamin_tp"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_nohp_tp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nohp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_hapus_kasir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/hapus"
        app:layout_constraintEnd_toEndOf="@+id/btn_simpan_kasir"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_simpan_kasir"
        app:layout_constraintTop_toBottomOf="@+id/btn_simpan_kasir" />

</androidx.constraintlayout.widget.ConstraintLayout>